--- a/KEIL/IFR_Engineering_Main_2018.uvprojx
+++ b/KEIL/IFR_Engineering_Main_2018.uvprojx
@@ -363,7 +363,7 @@
             <useXO>0</useXO>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>USE_STDPERIPH_DRIVER</Define>
+              <Define>USE_STDPERIPH_DRIVER,__FPU_PRESENT=1,__FPU_USED =1</Define>
               <Undefine></Undefine>
               <IncludePath>..\STM32MCU;..\ROBOT\ALGO;..\ROBOT\APP;..\ROBOT\BSP;..\ROBOT\MODULE\MPU60500;..\USER;..\ROBOT\ANALYSIS;..\ROBOT\MODULE\IMU_Uranus</IncludePath>
             </VariousControls>
