增加了半自动上岛，更新了下岛参数，日常更新其他部分
下一版本增加半自动等等一系列全局状态

--- a/KEIL/IFR_Engineering_Main_2018.uvprojx
+++ b/KEIL/IFR_Engineering_Main_2018.uvprojx
@@ -508,6 +508,11 @@
               <FileType>1</FileType>
               <FilePath>..\ROBOT\APP\take_bullet.c</FilePath>
             </File>
+            <File>
+              <FileName>semi_automatic_landing.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\ROBOT\APP\semi_automatic_landing.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
