--- a/KEIL/IFR_Engineering_Main_2018.uvprojx
+++ b/KEIL/IFR_Engineering_Main_2018.uvprojx
@@ -518,6 +518,11 @@
               <FileType>1</FileType>
               <FilePath>..\ROBOT\APP\semi_automatic_landing.c</FilePath>
             </File>
+            <File>
+              <FileName>trailer.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\ROBOT\APP\trailer.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
