完善模式摄像头切换及操作反向、修复下岛准备位没有重置的BUG，更新拖车、加入补弹。等等一系列优化，可作为战场版（参数待调）
完善模式摄像头切换及操作反向、修复下岛准备位没有重置的BUG，更新拖车、加入补弹。等等一系列优化，可作为战场版（参数待调）

--- a/KEIL/IFR_Engineering_Main_2018.uvprojx
+++ b/KEIL/IFR_Engineering_Main_2018.uvprojx
@@ -528,6 +528,11 @@
               <FileType>1</FileType>
               <FilePath>..\ROBOT\APP\image_control.c</FilePath>
             </File>
+            <File>
+              <FileName>replenish_bullet.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\ROBOT\APP\replenish_bullet.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -679,14 +684,14 @@
               <FilePath>..\ROBOT\ANALYSIS\can2_analysis.c</FilePath>
             </File>
             <File>
-              <FileName>remote_analysis.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\ROBOT\ANALYSIS\remote_analysis.c</FilePath>
-            </File>
-            <File>
               <FileName>usart6_wifi_Debug_OSC.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\ROBOT\ANALYSIS\usart6_wifi_Debug_OSC.c</FilePath>
+            </File>
+            <File>
+              <FileName>remote_analysis.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\ROBOT\ANALYSIS\remote_analysis.c</FilePath>
             </File>
             <File>
               <FileName>viceboard_analysis.c</FileName>
