增加键盘复位功能，增加键盘开关屏幕功能，增加智能爬坡升降功能，更新战场版ERROR_CHECK策略
增加键盘复位功能，增加键盘开关屏幕功能，增加智能爬坡升降功能，更新战场版ERROR_CHECK策略，更新部分键位控制。部分测试无毛病

--- a/KEIL/IFR_Engineering_Main_2018.uvprojx
+++ b/KEIL/IFR_Engineering_Main_2018.uvprojx
@@ -533,6 +533,11 @@
               <FileType>1</FileType>
               <FilePath>..\ROBOT\APP\replenish_bullet.c</FilePath>
             </File>
+            <File>
+              <FileName>uphill_auto_lift.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\ROBOT\APP\uphill_auto_lift.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
